Git Tests/force-app/main/default/default/objects/CondicaoPagamentoPorCD__c/CondicaoPagamentoPorCD__c.object-meta.xml
<CustomObject>
    <label>Condição de pagamento por CD</label>
    <nameField>
        <label>Nome de Condição de pagamento</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Condições de pagamentos por CD</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>