Git Tests/force-app/main/default/default/objects/CondicaoPagamentoPorCD__c/fields/CloseDate__c.field-meta.xml
<CustomField>
    <fullName>CloseDate__c</fullName>
    <label>Data de validade</label>
    <type>Date</type>
</CustomField>