Git Tests/force-app/main/default/default/objects/CondicaoPagamentoPorCD__c/fields/CondicaoPagamento__c.field-meta.xml
<CustomField>
    <fullName>CondicaoPagamento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Condição de pagamento</label>
    <referenceTo>CondicaoPagamento__c</referenceTo>
    <relationshipLabel>Condição de Pagamento CD</relationshipLabel>
    <relationshipName>CondicoesPagamento</relationshipName>
    <type>Lookup</type>
</CustomField>