Git Tests/force-app/main/default/default/objects/CondicaoPagamentoPorCD__c/fields/CondicaoPagamentoPL__c.field-meta.xml
<CustomField>
    <fullName>CondicaoPagamentoPL__c</fullName>
    <label>Condição de Pagamento</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Integradora__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>002/28 D</fullName>
            </value>
            <value>
                <fullName>003/30 D</fullName>
            </value>
            <value>
                <fullName>004/45 D</fullName>
            </value>
            <value>
                <fullName>042/60 D</fullName>
            </value>
            <value>
                <fullName>012/30,45,60 D</fullName>
            </value>
            <value>
                <fullName>028/35 D</fullName>
            </value>
            <value>
                <fullName>058/56 D</fullName>
            </value>
            <value>
                <fullName>046/45,60 D</fullName>
            </value>
            <value>
                <fullName>013/30,60 D</fullName>
            </value>
            <value>
                <fullName>036/21 D</fullName>
            </value>
            <value>
                <fullName>115/20 D</fullName>
            </value>
            <value>
                <fullName>065/25 D</fullName>
            </value>
            <value>
                <fullName>007/28,35 D</fullName>
            </value>
            <value>
                <fullName>008/28,35,42 D</fullName>
            </value>
            <value>
                <fullName>010/28,35,42,49,56</fullName>
            </value>
            <value>
                <fullName>081/28,42 D</fullName>
            </value>
            <value>
                <fullName>011/30,45 D</fullName>
            </value>
            <value>
                <fullName>049/14 DIAS</fullName>
            </value>
            <value>
                <fullName>066/10 D</fullName>
            </value>
            <value>
                <fullName>045/120 D</fullName>
            </value>
            <value>
                <fullName>006/90 D</fullName>
            </value>
            <value>
                <fullName>043/A VISTA</fullName>
            </value>
            <value>
                <fullName>001/30 D - 5,15,25</fullName>
            </value>
            <value>
                <fullName>003</fullName>
            </value>
            <value>
                <fullName>004</fullName>
            </value>
            <value>
                <fullName>005</fullName>
            </value>
            <value>
                <fullName>005/49 D</fullName>
            </value>
            <value>
                <fullName>006</fullName>
            </value>
            <value>
                <fullName>009/28,35,42,49 D</fullName>
            </value>
            <value>
                <fullName>014/30,60,90 D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>