Git Tests/force-app/main/default/default/objects/CondicaoPagamentoPorCD__c/fields/FretePicklist__c.field-meta.xml
<CustomField>
    <fullName>FretePicklist__c</fullName>
    <label>Tipo de Frete</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CIF</fullName>
                <default>true</default>
                <label>CIF</label>
            </value>
            <value>
                <fullName>FOB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>