Git Tests/force-app/main/default/default/objects/CondicaoPagamentoPorCD__c/fields/Integradora__c.field-meta.xml
<CustomField>
    <fullName>Integradora__c</fullName>
    <label>Integradora</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bionexo</fullName>
            </value>
            <value>
                <fullName>Apoio</fullName>
            </value>
            <value>
                <fullName>Sintese</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>