Git Tests/force-app/main/default/default/objects/CondicaoPagamentoPorCD__c/fields/MinimumBilling__c.field-meta.xml
<CustomField>
    <fullName>MinimumBilling__c</fullName>
    <label>Faturamento Mínimo</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>