Git Tests/force-app/main/default/default/objects/CondicaoPagamentoPorCD__c/fields/Observacoes__c.field-meta.xml
<CustomField>
    <fullName>Observacoes__c</fullName>
    <label>Observações</label>
    <length>255</length>
    <type>Text</type>
</CustomField>