Git Tests/force-app/main/default/default/objects/CondicaoPagamentoPorCD__c/fields/Orcamento__c.field-meta.xml
<CustomField>
    <fullName>Orcamento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Orçamento</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Condições de pagamentos por CD</relationshipLabel>
    <relationshipName>Condicespagamentospor_CD</relationshipName>
    <type>Lookup</type>
</CustomField>